--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       color: #ffffff;
-      background-color: #778186;
+      background-color: #74992e;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div align="center">
-    <h1>Congratulations</h1>
+    <h1>Kudos</h1>
     <h2>This application is being deployed using AWS CodeDeploy & CodePipeline.</h2>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
